inserção do losango

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,6 +6,7 @@
     --orange: #FA9C1F;
     --red: #DE3E3E;
     --purple: #620069;
+    --gray: #EBEBEB;
   }
   
 
@@ -32,8 +33,12 @@ section {
     height: 100vh !important;
 }
 
+.input {
+    background-color: var(--gray);
+}
+
 .play-all {
-    background-color: gray;
+    background-color: var(--gray);
     width: 20rem;
     height: 4rem;
 }
@@ -51,11 +56,15 @@ section {
 }
 
 .triangle {
-    width: 0;
-    height: 0;
-    background-color: rgb(221, 46, 46);
-    /* border: 1px solid black; */
-    border-left: 10rem solid red;
-    border-top: 8rem solid transparent;
-    border-bottom: 8rem solid transparent;
+    width: 8rem;
+    height: 100vh;
+    background-color: var(--orange);
+    clip-path: polygon(88% 0, 0 0, 40% 50%);    
+}
+
+.parallelogram {
+    width: 16rem;
+    height: 100vh;
+    background-color: white;
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)
 }
