--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,9 +11,8 @@
   
 
 .img-logo-overwatch {
-    filter: contrast(180%);
-    width: 19rem;
-    height: 10rem;
+    width: 21rem;
+    height: 11rem;
 }
 
 .welcome-play {
@@ -44,11 +43,11 @@ section {
 }
 
 .w-70 {
-    width: 70%
+    width: 50%
 }
 
 .section-2 {
-    background-color: black;
+    /* background-color: black; */
 }
 
 .button-acess {
@@ -56,17 +55,49 @@ section {
 }
 
 .triangle {
-    width: 8rem;
+    width: 9.5rem;
     height: 100vh;
     background-color: var(--orange);
-    clip-path: polygon(88% 0, 0 0, 40% 50%);    
+    clip-path: polygon(88% 0, 0 0, 40% 50%);
+    left: 22px; 
+    z-index: 2;
+    top: -10px;
+    /* transform: rotate(3deg) ; */
 }
 
 .parallelogram {
-    width: 32rem;
+    width: 50rem;
     height: 100vh;
-    background-color: white;
-    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-    position: absolute;
-    left: 26rem;
+    background-color: rgb(0, 0, 0);
+    clip-path: polygon(18% 0%, 100% 0%, 95% 100%, 0% 100%);
+    z-index: 1;    
+    left: 4px;
+    top: 0px;
+    background-image: url(/assets/images/coliseu2.jpg);
+    background-position: -190px 0px;  
+    background-size: cover;
+    filter: brightness(6%) contrast(99%) saturate(0%) grayscale(100%) blur(1px) ;
+    opacity: 0.86;
+}
+
+.parallelogram-2 {
+    width: 45rem;
+    height: 100vh;
+    background-color: var(--orange);
+    clip-path: polygon(78% 0, 100% 0%, 100% 100%, 62% 100%);    
+    left: 220px;
+    top: 0px;
+    z-index: 3;    
+}
+
+.arrows {
+    top: 70px;
+    left: 775px;
+    background-color: transparent;
+    z-index: 4;
+}
+
+.arrows-img {
+    width: 150px;
+    background-color: transparent;    
 }
