--- a/assets/css/beginning.css
+++ b/assets/css/beginning.css
@@ -1,59 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 
 .polygon-beg {
     clip-path: polygon(48% 0, 100% 0, 100% 100%, 38% 100%);
-    width: 80rem;
+    width: 150rem;
     height: 100vh;
-    background-color: rgb(8, 197, 58);
-    left: -37rem;
+    background-color: #1A0024;
+    left:-73rem;
     top: 0px;
+    z-index: 1
+   
+}
+
+.polygon-beg2 {
+    clip-path: polygon(73% 0, 100% 0, 100% 100%, 38% 100%);
+    width: 40rem;
+    height: 100vh;
+    background-color: #FA9C1F;
+    left: 20rem;
+    top: 0px;
+    z-index: 2;
+    
+   
 }
 
 nav {
     width: 100vw;
     height: 8rem;
-    z-index: 1;
-    background-color: transparent;
-    border: 1px solid black;
-    font-family: 'Teko', sans-serif;
-    font-size: 2rem;
+    z-index: 4;
+    background-color: transparent;   
+    font-family: 'Play', sans-serif;
+    font-weight: 700;
+    font-size: 1.8rem;
+    gap: 20rem;
 }
 
 .menu {
     left: 6rem;
 }
+.menu-item-active {    
+    padding-block: 0.5rem;
+    padding-inline: 1.5rem;
+    transform: skewX(-10deg);
+    background-color: #DE3E3E;
+    color: white;
+}
 
 .logo {
-    width: 3rem;
+    width: 4.5rem;
+}
+
+.avatar {
+    width: 4.8rem;    
 }
 
 .play-ranked {
-    font-family: 'Teko', sans-serif;
-    margin-top: 16rem;
+    font-family: 'Play', sans-serif;
+    font-weight: 700;
+    margin-top: 21rem;
     margin-left: 3rem;
-    font-size: 4rem;
+    font-size: 4rem;    
+    font-style: italic;
 }
 
 .heros-big {
-    font-family: 'Teko', sans-serif;
-    font-size: 6rem;
-    top: 20rem;
-    left: 32rem;
+    font-family: 'Play', sans-serif;
+    font-size: 5.5rem;
+    font-weight: 700;
+    font-style: italic;
+    top: 27.5rem;
+    left: 41rem;
     z-index: 2;
     transform: rotate(270deg);
 }
 
 .rectangle {
-    width: 10rem;
-    height: 4rem;
+    width: 16rem;
+    height: 5.5rem;
+    background-color: white;
 }
 
 .square {
-    width: 4rem;
-    height: 4rem;
+    width: 5.5rem;
+    height: 5.5rem;
+    border: 1rem solid white;
+}
+.square-1 {
+    background-color: white;
 }
 
-.infos-character {
-    margin-left: 10rem;
+.square-2 {
+    background-color: #3EADDE;
+}
+
+.skew {
+    transform: skewX(-9deg);
+}
+
+.arrows {
+    width: 10rem;
+    background-color: white;
+    z-index: 5;
 }
 
