--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -174,7 +174,10 @@ section {
     border-radius: 5%;
 }
 
-
-
+@media only screen and (min-width: 1366px) {
+    .play-all {
+        margin-top: -4rem;
+    }
+}
 
 
