--- a/assets/css/heros.css
+++ b/assets/css/heros.css
@@ -26,6 +26,16 @@
     transform: skewX(10deg);
 }
 
+.avatar-dva {
+    width: 4.8rem;
+    height: 4.8rem;
+    background-image: url(/assets/images/d.va-avatar.png);
+    background-size: 200%;
+    background-repeat: no-repeat;
+    background-position: -1.5rem -1.5rem;
+    transform: scaleX(-1) skewX(-10deg);
+}
+
 .icons-menu {
     width: 3rem;
     height: 3rem;
@@ -61,6 +71,19 @@
     border-radius: 50%;
 }
 
+.circle-hero-sm-exchange {
+    width: 4.2rem;
+    height: 4.2rem;
+    background-color: #FA9C1F;
+    border-radius: 50%;
+}
+
+.circle-hero-sm-exchange:hover {
+    width: 4.8rem;
+    height: 4.8rem;
+   
+}
+
 .icons-character {
     width: 2.5rem;
     height: 2.5rem; 
@@ -75,6 +98,10 @@
     width: 40rem; 
     margin-left: 9rem;
     margin-top: 3.8rem;   
+}
+
+.big-dva {
+    width: 35rem;
 }
 
 .infos-character2 {
@@ -129,6 +156,22 @@
     width: 31.5rem;
 }
 
+.info-1-dva {
+    width: 28.3rem;
+}
+
+.info-2-dva {
+    width: 19.3rem;
+}
+
+.info-3-dva {
+    width: 15.3rem;    
+}
+
+.info-4-dva {
+    width: 25.5rem;
+}
+
 .container-avatar-big {
     width: 37.3rem;
         
@@ -136,6 +179,17 @@
 
 .avatar-big {
     width: 10rem;
+}
+
+.avatar-big-dva {
+    width: 10rem;
+    height: 10rem;
+    background-image: url(/assets/images/d.va-avatar.png);
+    background-size: 200%;
+    background-repeat: no-repeat;
+    background-position: -2.5rem -2.8rem;
+    transform: scaleX(-1) 
+    
 }
 
 .avatar-medium-border {
@@ -148,4 +202,18 @@
 
 .avatar-medium {
     width: 6.8rem;
+}
+
+
+@media only screen and (min-width: 1366px) {
+    .infos-character2 {
+        width: 58rem;
+        height: 45rem;
+        top: 16rem;
+        left: 9rem;        
+    }
+
+    .name-character {
+        top: 10rem;
+    }
 }
