--- a/assets/css/heros.css
+++ b/assets/css/heros.css
@@ -26,6 +26,16 @@
     transform: skewX(10deg);
 }
 
+.container-avatar::after {
+    content: "●";
+    position: absolute;
+    bottom: -0.5rem;
+    font-size: 1.5rem;
+    left: 4.9rem;
+    transform: skewX(10deg);
+    color: #23B732;
+}
+
 .avatar-dva {
     width: 4.8rem;
     height: 4.8rem;
