--- a/assets/css/beginning.css
+++ b/assets/css/beginning.css
@@ -11,6 +11,10 @@
     z-index: 1;   
 }
 
+.menu {
+  gap: 3rem;
+}
+
 .polygon-beg2 {
     clip-path: polygon(73% 0, 100% 0, 100% 100%, 38% 100%);
     width: 40rem;
@@ -150,12 +154,12 @@ nav {
     left: -3rem;
 }
 
-.border2 {
+.border2-beginning{
     width: 20rem;
     height: 32rem;
     transform: skewX(-14deg);
     border-left: 0.5rem solid #6D007B;
-    z-index: 3;    
+    z-index: 6;    
     top: 30rem;
     left: -10.2rem;
 }
@@ -209,10 +213,27 @@ nav {
 
 @media only screen and (min-width: 1280px) and (max-width: 1366px) {
   nav {
-    gap: 2rem;
-    font-size: 1.5rem;
+    gap: 12rem;
+    font-size: 1.2rem;
     z-index: 10;
   }
+
+  .menu {
+    gap: 2rem;
+  }
+
+  .logo {
+    width: 3rem;
+  }
+
+  .avatar {
+    width: 3.5rem;
+  }
+
+  .square {
+    width: 4rem;
+    height: 4rem;
+  }  
 
   .polygon-beg {
     width: 70rem;    
@@ -264,9 +285,9 @@ nav {
     left: 1rem;
   }
 
-  .border2 {  
-    height: 22rem;      
-    top: 20rem;
+  .border2-beginning {  
+    height: 102rem;      
+    top: -20rem;
     left: -3.75rem;
   }
 
@@ -334,10 +355,10 @@ nav {
     left: 1.3rem;   
 }
 
-.border2 {
+.border2-beginning {
     width: 20rem;
     height: 32rem;        
-    top: 20rem;
+    top: 25rem;
     left: -4.5rem;
 }
 
